...
                <com.tsyche.notablymd.presentation.view.misc.StylableEditTextWithHistory
                    android:id="@+id/EnterBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:minHeight="48dp"
                    android:hint="@string/note"
                    android:inputType="textMultiLine|textCapSentences"
                    android:paddingStart="24dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="24dp"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

...
